--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
   background-color: #fbfbfbd7;
 }
 
-/* Begin styles to Nav */
+/* Styles to Nav */
 .navbar {
   display: flex;
   position: relative;
@@ -35,7 +35,7 @@ nav h1 {
   margin-left: 20px;
   color: #252424ff;
   font-size: 18px;
-  font-family: "Oswald", sans-serif;
+  font-family: "Spectral", serif;
 }
 
 .nav-links {
@@ -61,4 +61,17 @@ nav h1 {
 
 .nav-links li:hover {
   text-decoration: underline;
+}
+
+/* Styles to Footer */
+footer {
+  background-color: #252424;
+  color: #ebedf088;
+  text-align: center;
+}
+
+footer p {
+  margin-bottom: 0px;
+  margin-block-end: 0px;
+  padding: 5px;
 }
