--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,15 @@ body {
   background-color: #fbfbfbd7;
 }
 
+/* Utilities */
+img {
+  width: 100%;
+}
+
+section {
+  margin: 80px 0px 80px;
+}
+
 /* Styles to Nav */
 .navbar {
   display: flex;
@@ -63,6 +72,11 @@ nav h1 {
   text-decoration: underline;
 }
 
+/* Styles to About */
+.aboutHeader {
+  margin-bottom: 30px;
+}
+
 /* Styles to Footer */
 footer {
   background-color: #252424;
@@ -74,4 +88,11 @@ footer p {
   margin-bottom: 0px;
   margin-block-end: 0px;
   padding: 5px;
+}
+
+/* MEDIA QUERY FOR 991px */
+@media screen and (max-width: 991px) {
+  .aboutSmallText {
+    font-size: 12px;
+  }
 }
