--- a/src/index.css
+++ b/src/index.css
@@ -108,6 +108,10 @@ nav h1 {
   margin-top: 100px;
 }
 
+.languages {
+  color: #505050;
+}
+
 /* Styles to Contact */
 .contactFormHeader {
   font-size: 25px;
