--- a/src/index.css
+++ b/src/index.css
@@ -1,106 +1,100 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-} */
-
 * {
   box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .project-animation {
-    animation: project-animation-fade 0.5s linear;
-    animation-iteration-count: 1;
-  }
-}
-@keyframes project-animation-fade {
-  from {
-    transform: translate(0px, 50px);
-    opacity: 0;
-  }
-  to {
-    transform: translate(0px, 0px);
-    opacity: 1;
-  }
+:root {
+  --color-dark: rgba(37, 36, 36, 0.883);
 }
 
 body {
-  margin: 0;
-  padding: 0;
   background-color: #fbfbfbd7;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  margin: 0;
+  padding: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-/* Utilities */
-img {
-  width: 100%;
-  border-radius: 10px;
+a:hover {
+  color: var(--color-dark);
+  text-decoration: underline;
 }
 
-section {
-  margin: 80px 0px 80px;
+h1 {
+  font-size: 4rem;
 }
 
-.sectionHeader {
-  text-align: center;
-  font-size: 17px;
-  font-family: monospace;
+h2 {
+  font-size: 3rem;
 }
 
-/* Styles to Nav */
-.navbar {
-  display: flex;
-  position: relative;
-  justify-content: space-between;
-  align-items: center;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+h3 {
+  font-size: 2rem;
 }
 
-nav h1 {
-  margin-left: 20px;
-  color: #252424ff;
-  font-size: 18px;
-  font-family: "Spectral", serif;
+p {
+  font-size: 1.2rem;
 }
 
-.nav-links {
-  height: 100%;
-}
-
-.nav-links ul {
+ul {
   display: flex;
   margin: 0;
   padding: 0;
 }
 
-.nav-links li {
+ul li {
   list-style: none;
 }
 
-.nav-links li a {
+ul li a {
   display: block;
   text-decoration: none;
   padding: 16px;
 }
 
-.nav-links li:hover {
-  text-decoration: underline;
+/* Styles to Nav */
+nav {
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  position: absolute;
+  top: 0;
+  width: 100vw;
 }
 
 .navInactive {
-  color: #252424ff;
+  color: var(--color-dark);
 }
 
 .navActive {
-  color: pink;
+  color: black;
+}
+
+.portfolio-title {
+  color: var(--color-dark);
+  font-size: 18px;
+  margin-left: 20px;
+}
+
+/* Styles to Home Page */
+.home--page {
+  background-image: url("./assets/images/homepage.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  padding-top: 200px;
+  padding-left: 100px;
+}
+
+.btn--clear {
+  background-color: #f7f7f742;
+  border: 1px solid #cccccc;
+  border-radius: 10px;
+  padding: 10px 20px;
 }
 
 /* Styles to About */
@@ -199,3 +193,19 @@ footer p {
     width: 85%;
   }
 }
+
+/* Utilities */
+img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+/* section {
+  margin: 80px 0px 80px;
+} */
+
+/* .sectionHeader {
+  text-align: center;
+  font-size: 17px;
+  font-family: monospace;
+} */
