Updates Contact Page

--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ p {
   font-size: 1.2rem;
 }
 
-ul {
+nav ul {
   display: flex;
   margin: 0;
   padding: 0;
@@ -52,6 +52,14 @@ ul li a {
   display: block;
   text-decoration: none;
   padding: 16px;
+}
+
+.bar {
+  background-color: #cccccc6a;
+  border-top: 1px solid #a6a6a6c6;
+  height: 20px;
+  margin-top: 50px;
+  width: 100vw;
 }
 
 /* Styles to Nav */
@@ -97,6 +105,21 @@ nav {
   padding: 10px 20px;
 }
 
+/* Styles to Contact */
+.contact--section {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  margin-left: 80px;
+  max-width: 500px;
+  height: 80vh;
+}
+
+.contact--section a {
+  color: var(--color-dark);
+  padding: 0px;
+}
+
 /* Styles to About */
 .aboutHeader {
   margin-bottom: 40px;
@@ -121,44 +144,6 @@ nav {
 
 .languages {
   color: #505050;
-}
-
-/* Styles to Contact */
-/* .contact-card {
-  background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='560' height='185' viewBox='0 0 560 185' fill='none'%3E%3Cellipse cx='102.633' cy='61.0737' rx='102.633' ry='61.0737' fill='%23ED64A6' /%3E%3Cellipse cx='399.573' cy='123.926' rx='102.633' ry='61.0737' fill='%23F56565' /%3E%3Cellipse cx='366.192' cy='73.2292' rx='193.808' ry='73.2292' fill='%2338B2AC' /%3E%3Cellipse cx='222.705' cy='110.585' rx='193.808' ry='73.2292' fill='%23ED8936' /%3E%3C/svg%3E");
-  z-index: -1;
-  position: absolute;
-  height: 300px;
-  max-width: 640px;
-  width: full;
-  background-repeat: no-repeat;
-  background-size: cover;
-  filter: blur(30px);
-} */
-
-.contact-card-content {
-  margin-top: 300px;
-  margin-bottom: 400px;
-  filter: blur(0px);
-  z-index: 1;
-  background-color: white;
-  width: 38%;
-  padding: 10px;
-  border-radius: 10px;
-  margin-left: 80px;
-  border: 1px solid black;
-  margin: auto;
-}
-
-.contactFormHeader {
-  font-size: 25px;
-  margin-top: 30px;
-}
-
-.formName,
-.formEmail,
-.formMessage {
-  width: 35%;
 }
 
 /* Styles to Footer */
