--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,21 @@ ul li a {
   width: 100vw;
 }
 
+/* Grids */
+.grid {
+  display: grid;
+}
+
+.grid div {
+  padding: 70px;
+}
+
+@media screen and (min-width: 768px) {
+  .grid--1x2 {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
 /* Styles to Nav */
 nav {
   align-items: center;
